add: 支持查询鉴权